# Bluepill-hypervisor

./: .gitignore  Cargo.toml  README.md
hypervisor/: Cargo.toml
hypervisor/src/: lib.rs
hypervisor/src/amd/: mod.rs
hypervisor/src/amd/guest/: apic_id.rs  controls.rs  interrupt_handlers.rs  mod.rs  paging.rs  statesaves.rs  support.rs  vcpu.rs  vmcs.rs  vmm.rs  vmx.rs
hypervisor/src/amd/guest/area/: gdt_tss.rs  interrupt_handlers.rs  mod.rs  segment.rs  vmcb.rs
hypervisor/src/amd/guest/area/npts/: mod.rs
hypervisor/src/amd/guest/area/shared_data/: mod.rs
hypervisor/src/amd/guest/raw/: controls.rs  exception_wrapper.rs  gdt_tss.rs  mod.rs  page_wrapper.rs  segment.rs  statesaves.rs  vmcb_wrapper.rs
hypervisor/src/amd/guest/shared_data/: mod.rs
hypervisor/src/amd/guest/support/: apic_id.rs  error.rs  mod.rs
hypervisor/src/amd/vmexit/: mod.rs
hypervisor/src/arch/: mod.rs
kernelutils/: Cargo.toml
kernelutils/src/: lib.rs
kernelutils/src/hard/: mod.rs
kernelutils/src/kernel_alloc/: alloc_physical.rs  alloc_pool.rs  mod.rs
kernelutils/src/misc/: mod.rs
kernelutils/src/nt/: addresses.rs  mod.rs  platform_ops.rs  switch_stack.rs  undocumented.rs
kernelutils/src/spoof/: mod.rs
kernelutils/src/spoof/bios/: mod.rs
win_hv_kernel/: Cargo.toml  Makefile.toml
win_hv_kernel/src/: lib.rs
