[package]
name = "kernelutils"
version = "0.0.0"
edition = "2021"
[dependencies]
bit_field = "0.10"
bitfield = "0.16"
bitvec = { version = "1.0", default-features = false }
derivative = { version = "2.2", features = ["use_core"] }
derive_deref = "1.1"

num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
ntapi = { version = "0.4.1", default-features = false }
windows-sys = { version = "0.52.0", features = ["Win32_System_Kernel"] }
log = { version = "0.4", default-features = false }

spin = "0.9"
thiserror-no-std = "2.0"
x86 = "0.52"
wdk-sys = "0.2.0"
x86_64 = "0.15.1"
[build-dependencies]

wdk-build = "0.2.0"