[package]
name = "win_hv_kernel"
version = "0.0.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.2.0"
wdk-alloc = "0.2.0"
wdk-panic = "0.2.0"
wdk-sys = "0.2.0"
#hypervisor = { path = "../hypervisor", features = ["secondary-ept", "shellcode-hook"] }
log = "0.4.20" # https://crates.io/crates/log
kernel-log = "0.1.2" # https://crates.io/crates/kernel-log
com_logger = "0.1.1" # https://crates.io/crates/com_logger
kernelutils = { version = "0.0.0", path = "../kernelutils" }
hypervisor = { version = "0.0.0", path = "../hypervisor" }

[build-dependencies]
wdk-build = "0.2.0"
